# speedex-parallelize

./: README.md
implementation/src/: .gitignore  Makefile.am  account_merkle_trie.h  account_merkle_trie_utils.h  account_modification_log.cc  account_modification_log.h  approximation_parameters.h  async_worker.h  big_options.yaml  block_builder.cc  block_builder.h  block_builder_manager.cc  block_builder_manager.h  block_header_hash_map.cc  block_header_hash_map.h  block_producer.cc  block_producer.h  block_update_stats.h  block_validator.cc  block_validator.h  clean_offer_lmdbs.sh  clean_persisted_data.sh  cleanup.cc  cleanup.h  cloudlab_remote_init.sh  connection_info.h  consensus_api_server.cc  consensus_api_server.h  consensus_connection_manager.cc  consensus_connection_manager.h  convex_function_oracle.cc  convex_function_oracle.h  convex_oracle.cc  convex_oracle.h  convex_oracle_test.cc  coroutine_throttler.cc  coroutine_throttler.h  create_cloudlab.py  crypto_utils.cc  crypto_utils.h  (+178 more)
implementation/src/coingecko_data/: abc-usd-max.csv  ada-usd-max.csv  bch-usd-max.csv  bnb-usd-max.csv  btc-usd-max.csv  cake-usd-max.csv  chz-usd-max.csv  doge-usd-max.csv  dot-usd-max.csv  eos-usd-max.csv  etc-usd-max.csv  eth-usd-max.csv  ht-usd-max.csv  ltc-usd-max.csv  matic-usd-max.csv  trx-usd-max.csv  uni-usd-max.csv  usdc-usd-max.csv  usdt-usd-max.csv  vet-usd-max.csv  xrp-usd-max.csv  zec-usd-max.csv
implementation/src/cryptocoin_results/: withcancel_results
implementation/src/mega_final4/: 10_10_results  10_11_results  10_12_results  10_13_results  10_14_results  10_15_results  10_16_results  10_17_results  10_18_results  10_19_results  10_20_results  10_5_results  10_6_results  10_7_results  10_8_results  10_9_results  11_10_results  11_11_results  11_12_results  11_13_results  11_14_results  11_15_results  11_16_results  11_17_results  11_18_results  11_19_results  11_20_results  11_5_results  11_6_results  11_7_results  11_8_results  11_9_results  12_10_results  12_11_results  12_12_results  12_13_results  12_14_results  12_15_results  12_16_results  12_17_results  (+296 more)
implementation/src/mega_final_final/: 10_10_results  10_11_results  10_12_results  10_13_results  10_14_results  10_15_results  10_16_results  10_17_results  10_18_results  10_19_results  10_20_results  10_5_results  10_6_results  10_7_results  10_8_results  10_9_results  11_10_results  11_11_results  11_12_results  11_13_results  11_14_results  11_15_results  11_16_results  11_17_results  11_18_results  11_19_results  11_20_results  11_5_results  11_6_results  11_7_results  11_8_results  11_9_results  12_10_results  12_11_results  12_12_results  12_13_results  12_14_results  12_15_results  12_16_results  12_17_results  (+274 more)
implementation/src/mega_graph_data/: 10_10_results  10_11_results  10_12_results  10_13_results  10_14_results  10_15_results  10_16_results  10_17_results  10_18_results  10_19_results  10_20_results  10_5_results  10_6_results  10_7_results  10_8_results  10_9_results  11_10_results  11_11_results  11_12_results  11_13_results  11_14_results  11_15_results  11_16_results  11_17_results  11_18_results  11_19_results  11_20_results  11_5_results  11_6_results  11_7_results  11_8_results  11_9_results  12_10_results  12_11_results  12_12_results  12_13_results  12_14_results  12_15_results  12_16_results  12_17_results  (+296 more)
implementation/src/mega_graph_data2/: 10_10_results  10_11_results  10_12_results  10_13_results  10_14_results  10_15_results  10_16_results  10_17_results  10_18_results  10_19_results  10_20_results  10_5_results  10_6_results  10_7_results  10_8_results  10_9_results  11_10_results  11_11_results  11_12_results  11_13_results  11_14_results  11_15_results  11_16_results  11_17_results  11_18_results  11_19_results  11_20_results  11_5_results  11_6_results  11_7_results  11_8_results  11_9_results  12_10_results  12_11_results  12_12_results  12_13_results  12_14_results  12_15_results  12_16_results  12_17_results  (+296 more)
implementation/src/mega_graph_data4/: 10_10_results  10_11_results  10_12_results  10_13_results  10_14_results  10_15_results  10_16_results  10_17_results  10_18_results  10_19_results  10_20_results  10_5_results  10_6_results  10_7_results  10_8_results  10_9_results  11_10_results  11_11_results  11_12_results  11_13_results  11_14_results  11_15_results  11_16_results  11_17_results  11_18_results  11_19_results  11_20_results  11_5_results  11_6_results  11_7_results  11_8_results  11_9_results  12_10_results  12_11_results  12_12_results  12_13_results  12_14_results  12_15_results  12_16_results  12_17_results  (+296 more)
implementation/src/mega_graph_data5/: 10_10_results  10_11_results  10_12_results  10_13_results  10_14_results  10_15_results  10_16_results  10_17_results  10_18_results  10_19_results  10_20_results  10_5_results  10_6_results  10_7_results  10_8_results  10_9_results  11_10_results  11_11_results  11_12_results  11_13_results  11_14_results  11_15_results  11_16_results  11_17_results  11_18_results  11_19_results  11_20_results  11_5_results  11_6_results  11_7_results  11_8_results  11_9_results  12_10_results  12_11_results  12_12_results  12_13_results  12_14_results  12_15_results  12_16_results  12_17_results  (+296 more)
implementation/src/new_db/: new_memory_database  new_memory_database.cc  new_memory_database.h  new_user_account.h  test.cc
implementation/src/pricecomp_measurements/: cvxpy_10  cvxpy_20  cvxpy_50  tatonnement_10  tatonnement_20  tatonnement_50
implementation/src/rpc/: Makefile.am  consensus_api.cc  consensus_api.h  hello_world_api.cc  hello_world_api.h  rpcconfig.h  server_control_api.cc  server_control_api.h  signature_check_api.cc  signature_check_api.h  signature_shard_api.cc  signature_shard_api.h  state_query_api.cc  state_query_api.h  transaction_submission_api.cc  transaction_submission_api.h  transaction_submission_server.h
implementation/src/synthetic_data_generator/: big_synthetic_data_params.yaml  cryptocoin_dataset_gen.cc  cryptocoin_params.yaml  sig_check_params.yaml  sosp_mega_graph_params_20.yaml  (+23 more)
(+468 files in other folders)
